@@ -1,12 +1,0 @@
-﻿using System;
-
-namespace plistcil
-{
-    public class MyClass
-    {
-        public MyClass()
-        {
-        }
-    }
-}
-
