@@ -1,3 +1,10 @@
+2015-02-17  Natalia Portillo  <claunia@claunia.com>
+
+	* MyClass.cs:
+	* NSObject.cs:
+	* plist-cil.csproj:
+	  Pre-implement NSObject.
+
 2015-02-16  Natalia Portillo  <claunia@claunia.com>
 
 	* ChangeLog:
